Arrumando Layout Feed

--- a/v02/peNoChao/views/atletaFeed.ejs
+++ b/v02/peNoChao/views/atletaFeed.ejs
@@ -57,7 +57,7 @@
           <p><%=publication.descricao%></p> 
           </div>
           <!--  Inicio conteudo centro container -->
-          <div class="d-flex">
+          <div class="d-flex justify-content-center p-3">
             <a href="#"><img src="/images/midias/<%=publication.path%>" class="card-img " alt="Foto Post"></a>
           </div>
           <!--  fim conteudo centro container -->
