--- a/v02/peNoChao/views/atletaPerfil.ejs
+++ b/v02/peNoChao/views/atletaPerfil.ejs
@@ -19,7 +19,7 @@
         </div>
         <div class="container">
           <div class="row ">
-            <div class="col ">
+            <div class="col p-0">
               <!--  aqui renderiza nome do jogador logado   jogador.nome esta vindo do res.locals.jogador
                da pasta configs/auth  -->
                
