--- a/v02/peNoChao/views/cadastro.ejs
+++ b/v02/peNoChao/views/cadastro.ejs
@@ -35,6 +35,9 @@
               <label for="senhaConfirmacao"> Confirmação da Senha </label>
               <input type="password" id="senhaConfirmacao" name="senhaConfirmacao" required>
 
+              <label for="nome"> Nome </label>
+              <input type="text" id="nome" name="nome">
+
               <label for="sexo"> Sexo </label>
               <select name="sexo" required>
                 <option value="selecione" selected>Selecione</option>
@@ -45,8 +48,6 @@
               <label for="dataNascimento"> Data de Nascimento </label>
               <input type="date" id="dataNascimento" name="dataNascimento">
 
-              <label for="nome"> Nome de Usuário </label>
-              <input type="text" id="nome" name="nome">
 
               <label for="posicaoJogador"> Posição em Campo </label>
               <select name="posicaoJogador" required>
@@ -62,7 +63,7 @@
                 <option value="centroavante">Centroavante</option>
               </select>
               <label for="cep">CEP</label>
-              <div class="d-flex justify-content-around">
+              <div class="d-flex justify-content-center">
                 <input type="text" id="cep" name="cep" required>
                 <button type="submit" id="btnPesquisar" class="btn btn-primary "><img src="/images/lupa.png" class="pesquisarCep" alt=""></button>
               </div>
