--- a/v02/peNoChao/public/stylesheets/style.css
+++ b/v02/peNoChao/public/stylesheets/style.css
@@ -396,26 +396,27 @@ footer a{
 }
 
 .botaoPublicar {
-    background: #1a1cdb;
-    background-image: -webkit-linear-gradient(top, #1a1cdb, #1E62D0);
-    background-image: -moz-linear-gradient(top, #1a1cdb, #1E62D0);
-    background-image: -ms-linear-gradient(top, #1a1cdb, #1E62D0);
-    background-image: -o-linear-gradient(top, #1a1cdb, #1E62D0);
-    background-image: linear-gradient(to bottom, #1a1cdb, #1E62D0);
+    background: #a7c0e9;
+    background-image: -webkit-linear-gradient(top, #a7c0e9, #1E62D0);
+    background-image: -moz-linear-gradient(top, #a7c0e9, #1E62D0);
+    background-image: -ms-linear-gradient(top, #a7c0e9, #1E62D0);
+    background-image: -o-linear-gradient(top, #a7c0e9, #1E62D0);
+    background-image: linear-gradient(to bottom, #a7c0e9, #1E62D0);
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
     border-radius: 8px;
-    height: 22px;
+    height: 2vh;
+    width: 4vw;
     line-height: 13px;
     color: #FFFFFF;
     font-family: Open Sans;
-    width: 69px;
-    font-size: 13px;
+    font-size: 16px;
     font-weight: 100;
-    padding: 4px;
+    padding: 5px;
     border: solid #337FED 1px;
     cursor: pointer;
-    margin-left: -8px;
+    margin-left: 2px;
+    margin-top: 5px;
  }
  
  .botaoPublicar:hover {
