--- a/v02/peNoChao/views/atletaPerfil.ejs
+++ b/v02/peNoChao/views/atletaPerfil.ejs
@@ -36,8 +36,9 @@
                   <p class="text-center mt-2 mb-2" ><%= frase %></p>
                 </a>
               </div>
-              <div class="row row justify-content-center mb-3">
-                <a class="col-9 btn-form m-0" href="/atualizar" style="color:black">
+              <div class="row justify-content-center mb-3">
+                <a class="col-9 btn-form m-0 d-flex justify-content-around" href="/atualizar">
+                  <img src="/images/academia.PNG" alt="Atualizar Perfil" class="btn-icon2 mt-1 mb-1">
                   <p class="text-center mt-2 mb-2" >Editar Perfil</p>
                 </a>
               </div>
