--- a/v02/peNoChao/views/atletaPerfil.ejs
+++ b/v02/peNoChao/views/atletaPerfil.ejs
@@ -5,7 +5,7 @@
             <div class="col d-flex justify-content-center">
                 <!-- Banner Profile-->
                 <div>
-                    <img class="rounded-top-penochao bg-profile" src="/images/gramado-bkg.PNG">
+                    <img class="rounded-top-penochao bg-profile" src="/images/gramado-bkg.png">
                 </div>
               </div>
         </div>
@@ -32,7 +32,7 @@
 
               <div class="row justify-content-center mb-3">
                 <a class="col-9 btn-form m-0 d-flex justify-content-between" href="/<%= action %>">
-                  <img src="/images/faixa.PNG" alt="Seja um Capitão" class="btn-icon mt-1 mb-1">
+                  <img src="/images/faixa.png" alt="Seja um Capitão" class="btn-icon mt-1 mb-1">
                   <p class="text-center mt-2 mb-2" ><%= frase %></p>
                 </a>
               </div>
