--- a/v02/peNoChao/views/partials/headerLogada.ejs
+++ b/v02/peNoChao/views/partials/headerLogada.ejs
@@ -23,12 +23,12 @@
             </div>
             <div class="col px-0 d-flex justify-content-center">
               <a class="navbar-brand mx-0 py-0" href="#">
-                <img src="/images/notificações.PNG" alt="" id="imgNotificacoes">
+                <img src="/images/Notificacoes2.png" alt="" id="imgNotificacoes">
               </a>
             </div>
             <div class="col px-0 d-flex justify-content-center">
               <a class="navbar-brand mx-0 py-0   " href="sair"  >
-                <img src="/images/sair.PNG"  alt="SAIR" id="imgNotificacoes">
+                <img src="/images/sair.png"  alt="SAIR" id="imgNotificacoes">
               </a>
             </div>
           </div>
