alterando extensao PNG no perfilJogador.ejs

--- a/v02/peNoChao/views/perfilJogador.ejs
+++ b/v02/peNoChao/views/perfilJogador.ejs
@@ -20,7 +20,7 @@
                   <div class="col d-flex justify-content-center">
                       <!-- Banner Profile-->
                       <div>
-                          <img class="rounded-top-penochao bg-profile" src="/images/gramado-bkg.PNG">
+                          <img class="rounded-top-penochao bg-profile" src="/images/gramado-bkg.png">
                       </div>
                     </div>
               </div>
