--- a/v02/peNoChao/views/partials/headerLogada.ejs
+++ b/v02/peNoChao/views/partials/headerLogada.ejs
@@ -10,9 +10,10 @@
           </a>
         </div>
         <div class="col-sm-6 px-0">
-          <form class="form-inline justify-content-center">
-            <input class="form-control border-info rounded-pill col-sm-12" type="search" placeholder=""
+          <form action="/pesquisa" method="GET" class="form-inline justify-content-center">
+            <input class="form-control border-info rounded-pill col-sm-12" type="search" placeholder="Pesquisar"
               aria-label="Search" id="buscaHeader">
+            <button type="submit"><img src="/images/lupaPesquisa.png" alt="" width="10vw"></button>
           </form>
         </div>
           <div class="col d-flex justify-content-center icon-penochao-mobile-fixed" >
