--- a/v02/peNoChao/public/stylesheets/style.css
+++ b/v02/peNoChao/public/stylesheets/style.css
@@ -77,7 +77,7 @@ body {
 .bg-profile {
     margin:0;
     padding:0;
-    width:285px;
+    width: 100%;
 }
 
 .border-penochao {
@@ -221,6 +221,15 @@ body {
     height: 30px;
     align-self: center;
 }
+.btn-publica{
+    border-radius: 0px 15px 0px 0px;
+    background-color: rgb(66, 133, 244);
+
+}
+.btn-publica2{
+    border-radius: 0px 0px 15px 0px;
+    background-color: rgb(66, 133, 244);
+}
 
 #btn-form{
     margin: 5px 0px 45px 0px;
@@ -231,6 +240,10 @@ body {
     font-size: 100%;
     border: none;
     text-transform: uppercase;
+}
+.btn-publica:hover, .btn-publica2:hover{
+    box-shadow: 0 5px 11px 0 rgba(0,0,0,0.18), 0 4px 15px 0 rgba(0,0,0,0.15);
+    background-color: rgb(121, 195, 255);
 }
 #btn-form:hover, .btn-form:hover{
     box-shadow: 0 5px 11px 0 rgba(0,0,0,0.18), 0 4px 15px 0 rgba(0,0,0,0.15);
@@ -344,7 +357,7 @@ footer a{
     }
 
     .bg-profile {
-        width:375px;
+        width:100vw;
     }
     .col-feed {
         padding:0!important;
