--- a/v02/peNoChao/views/cadastro.ejs
+++ b/v02/peNoChao/views/cadastro.ejs
@@ -62,7 +62,7 @@
                 <option value="segundoAtacante">Segundo Atacante</option>
                 <option value="centroavante">Centroavante</option>
               </select>
-              <label for="cep">CEP</label>
+              <label for="cep">CEP (Clique na lupa para buscar e confirmar o seu CEP)</label>
               <div class="d-flex justify-content-center">
                 <input type="text" id="cep" name="cep" required>
                 <button type="submit" id="btnPesquisar" class="btn btn-primary "><img src="/images/lupa.png" class="pesquisarCep" alt=""></button>
