--- a/v02/peNoChao/views/atletaResultados.ejs
+++ b/v02/peNoChao/views/atletaResultados.ejs
@@ -15,26 +15,31 @@
         </div> -->
 
   <!-- Div fixa do time (capitão)-->
-  <div class="container-fluid p-2 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao mb-3 pb-3 px-4">
+  
+
+  <% let mostra; jogadorLogado.times_id == null ? mostra="d-none" : mostra=""; let meuTime = times[jogadorLogado.times_id - 1] %>
+  
+  <% escudoMeuTime = meuTime.MidiasTimes[0].path %>
+  <div class="container-fluid p-2 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao mb-3 pb-3 px-4 <%= mostra %>">
     <div class="mt-2">
       <h5 class="text-center">Meu Time</h5>
 
     </div>
-    <!--Divi das fotos dos jogadores-->
+    <!--Divi das escudo do meu Time-->
     <div class="row mt-3">
         <div class="col d-flex justify-content-center">
-          <img src="/images/logofinal.png" width="50%">
+          <img src="/images/midias/<%= escudoMeuTime %>" width="50%">
         </div>
     </div>
     <div class="row mt-2">
       <div class="col d-flex justify-content-center">
-        <a href="/times" style="color:black"> Pé no Chão </a>
+        <a href="/times" style="color:black"> <%= meuTime.nome %> </a>
       </div>
     </div>
   </div>
 
 <!--Div do grado dos jogadores destaque-->
-<div class="container-fluid p-2 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao mt-3 mb-3 pb-3 px-4">
+<div class="container-fluid p-2 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao mb-3 pb-3 px-4">
   <div class="mt-2">
     <h5 class="text-center">Jogadores</h5>
   </div>
