--- a/v02/peNoChao/views/atualizacaoCadastroTime.ejs
+++ b/v02/peNoChao/views/atualizacaoCadastroTime.ejs
@@ -26,18 +26,19 @@
               <h4 class="m-3">Informe os seguintes dados para montarmos o perfil do seu time:</h4>
 
               <div class="mt-3 mx-5 px-5 alinhamento">
-                <form action="/time/atualizar" method="POST" enctype="multipart/form-data">
+                <form action="/time/editar/<%= time.id %>" method="POST" enctype="multipart/form-data">
 
                   <input type="text" id="idCapitao" name="idCapitao" value="<%= idCapitao %>" readonly class="d-none">
 
                   <label for="nome">  Nome do time: </label>
-                  <input type="text" id="nome" name="nome" >
+                  <input type="text" id="nome" name="nome" value="<%= time.nome %>" >
 
                   <label for="cep"> CEP da Sede do Time: </label>
-                  <input type="text"  id="nome"  name="cep">
-
+                  <input type="text"  id="nome"  name="cep" value="<%= time.cep %>">
+                  <% escudoAtual = time.MidiasTimes[0].path %>
                   <label for="logo"> Brasão do time: </label>
-                  <input type="file" name="logo" id="file">
+                  <input type="text" name="escudoAtual" value="<%= escudoAtual %>" readonly class="d-none">
+                  <input type="file" name="logo" id="file" >
                  
                   <input class="mb-4" type="submit" id="btn-form"value="Salvar">
                 </form>
