pagina do jogador com include

--- a/v02/peNoChao/views/perfilJogador.ejs
+++ b/v02/peNoChao/views/perfilJogador.ejs
@@ -14,179 +14,9 @@
   
   <main class="container">
     <div class="row mt-3">
-            <!-- Início da coluna do Perfil -->
-            <div class="col-sm-3 border rounded-top-penochao rounded-bottom-penochao">
-              <div class="row">
-                  <div class="col d-flex justify-content-center">
-                      <!-- Banner Profile-->
-                      <div>
-                          <img class="rounded-top-penochao bg-profile" src="/images/gramado-bkg.png">
-                      </div>
-                    </div>
-              </div>
-              <div class="row">
-                  <div class="col d-flex justify-content-center">
-                      <!-- Foto profile -->
-                      <div class="foto-perfil"  style="background-image: url('/images/midias/<%=jogador.path%>');">
-                      </div>
-                  </div>
-              </div>
-              <div class="container">
-                <div class="row ">
-                  <div class="col ">
-                    <!--  aqui renderiza nome do jogador logado   jogador.nome esta vindo do res.locals.jogador
-                     da pasta configs/auth  -->
-                      <h5 class="text-center"><%= jogador.nome %></h5>
-                      <p class="text-center"><%= jogador.posicaoJogador %></p>
-                      <!-- <h5 class="text-center">Estatísticas</h5> -->
-                  </div>
-                </div>
-                </div>
-              </div>
-              <div class="col-sm-6 col-feed">
-                <div class="container bg-feed border border-penochao-mobile rounded-top-penochao rounded-bottom-penochao">
-                  <form action="/atleta/postagem" method="POST" enctype="multipart/form-data">
-                    <div class="row mx-0 my-3 rounded-penochao">
-                      <div class="col-10 my-2 py-3 bg-white rounded-left-penochao">
-                        <div class="">
-                          <input name="descricao" type="text" required class="form-control form-control-lg input-penochao-border"
-                            placeholder="Hora da resenha">
-                        </div>
-                      </div>
-              
-                      <div class="col-2 my-2 rounded-right-penochao   justify-content-center align-items-center">
-                        <!-- <img class="botaoCameraPublicar m-2" src="/images/cam2Mini.PNG"> -->
-                        <!-- Botao para upload das fotos  -->
-                        <input id="r" name="foto" type="file">
-                        <label id="l" for="r"></label>
-              
-                      </div>
-                      <button type="submit" class="botaoPublicar">Publicar</button>
-                    </div>
-                  </form>
-              
-                  <!-- Começo do card feed  -->
-                  <% if (publications) { %>
-                  <!-- verifica se tem alguma postagem se ao tiver nao entra na condicao-->
-                  <% publications.reverse(); publications.forEach(publication => { %>
-                    <% if (publication.jogadores_id == jogador.id) { %>
-
-                  <!-- pela array puplication passa pelo reverse() para trocar orgem do arry antes de passar para forEach-->
-                  <div class="row mx-2 my-2 bg-white mb-4 rounded-penochao">
-                    <div class="col-12 ">
-              
-                      <!-- Inicio parte inferior  do time line -->
-              
-                      <div class="d-flex-in my-3">
-                        <div class="d-flex">
-                          <div class="d-flex">
-                            <a href="/perfilJogador/<%=publication.Jogador.id%>">
-                              <img src="/images/midias/<%=publication.Jogador.path%>" class="rounded-circle" width="30px" height="30px"
-                                alt="Foto perfil"></a>
-                          </div>
-              
-                          <div class=" d-flex-column align-items-center col-sm-6">
-                            <a href="">
-                              <h6 class="text-1 my-1"><%=publication.Jogador.nome%></h6>
-                            </a>
-                            <h6 class="text-1"><%=publication.Jogador.posicaoJogador%></h6>
-                          </div>
-              
-                          <div class=" ml-auto">
-                            <button class="d-button" type="submit">
-                              <h6 class=" text-1">Deixar de seguir</h6>
-                            </button>
-                          </div>
-              
-                        </div>
-                        <div class="text-lowercase">
-                        <p><%=publication.descricao%></p> 
-                        </div>
-                        <!--  Inicio conteudo centro container -->
-                        <div class="d-flex">
-                          <a href="#"><img src="/images/midias/<%=publication.path%>" class="card-img " alt="Foto Post"></a>
-                        </div>
-                        <!--  fim conteudo centro container -->
-                        <!-- Inicio imagens para curtir pagina -->
-                        <div class="d-flex  justify-content-end">
-                          <div>
-                            <!-- botao da imagem  -->
-                            <form action="/atleta/like" method="POST">
-                              <input type="hidden" name="postagens_id" id="postagens_id" value="<%=publication.id%>">
-                              <input type="hidden" name="jogador_id" id="jogador_id" value="<%=jogador.id%>">
-                              <button class="d-button" type="submit"> <i class="fas fa-futbol ml-3 "> </i></button>
-                            </form>
-              
-                          </div>
-                          <div class=" ml-2">
-                            <h6 class=".d_text1"><%=publication.Curtidas.length%> </h6>
-                          </div>
-                          <div>
-                            <button class="d-button"> <i class="far fa-comment ml-2"> </i></button>
-                          </div>
-                          <div class="   ml-2 ">
-                            <h6 class=".d_text-1"><%=publication.Comentarios.length%></h6>
-                          </div>
-                          <div class="  ml-2 ">
-                            <!-- usei o moment para formatar data que foi postada foto  -->
-                            <h6 class="text-1"> <%= moment(publication.create_at).format('DD/MM/YYYY') %></h6>
-                          </div>
-                        </div>
-                        <!-- Fim imagens para curtir pagina -->
-                        <!-- Inicio comentarios  -->
-                        <div class="d-flex  ml-2 ">
-                          <div class="d-flex-column ">
-                            <div class="d-flex-column">
-                              <% if (comentarios) { %>
-                              <!-- verifica se tem alguma postagem se ao tiver nao entra na condicao-->
-                                <% for(let comentario of comentarios ) { %>
-                                  <% if (comentario.postagens_id == publication.id) { %>
-                                    <div class="d-flex row ">
-                                      <a href="/perfilJogador/<%=comentario.Jogador.id%>">
-                                      <img src="/images/midias/<%=comentario.Jogador.path%>" class="rounded-circle" width="30px" height="30px"
-                                      alt="Foto Perfil">
-                                     </a>
-                                      <a href="/perfilJogador/<%=comentario.Jogador.id%>">
-                                        <h6 class=" m-1 y-5 text-1"><%=comentario.Jogador.nome%></h6>
-                                     </a>
-                                    </div>
-                                    <div class=" d-flex text-lowercase column   y-5">
-                                       <p><%=comentario.descricao%></p> 
-                                       <p class="text-2 y-5"><%=moment(comentario.create_at).format('DD/MM/YY')%></p>
-                                    </div>
-                                 <% } %>
-                            <% } %>
-                        <% } %>
-              
-                              <form action="/atleta/comentario" method="POST">
-                                <!-- rota so para gravar comentarios no banco de dados  -->
-                                <div class="postClass">
-                                  <!-- usei o hidden para passar id post //id jogador// para ser gravado banco de dados   -->
-                                  <input type="hidden" name="postagens_id" id="postagens_id" value="<%=publication.id%>">
-                                  <input type="hidden" name="jogador_id" id="jogador_id" value="<%=jogadorLogado.id%>">
-                                  <input class="form-control" type="text" name="descricao" placeholder="Deixe seu comentario "
-                                    id="descricao" required> </input>
-                                </div>
-                              </form>
-                            </div>
-                          </div>
-                        </div>
-                        <!-- Fim comentarios  -->
-                      </div>
-                    </div>
-                    <!-- Fim da coluna do feed -->
-                  </div>
-                  <% } %>
-
-                  <% } ); %>
-                  <% } %>
-                </div>
-              </div>
-              <!-- Fim da coluna do feed -->
-            </div>
-            <!-- Fim da coluna do Perfil -->
-            <!-- Início da coluna do feed -->
-
+      <%- include('perfilJogadorPerfil') %>
+      <%- include('perfilJogadorFeed') %>
+      <%- include('atletaResultados') %>  
     </div>
   </main>
 </body>
