--- a/v02/peNoChao/views/perfilJogador.ejs
+++ b/v02/peNoChao/views/perfilJogador.ejs
@@ -17,7 +17,7 @@
             <!-- Início da coluna do Perfil -->
             <div class="col-sm-3 border rounded-top-penochao rounded-bottom-penochao">
               <div class="row">
-                  <div class="col d-flex justify-content-center">
+                  <div class="col d-flex justify-content-center p-0">
                       <!-- Banner Profile-->
                       <div>
                           <img class="rounded-top-penochao bg-profile" src="/images/gramado-bkg.png">
