--- a/v02/peNoChao/views/partials/head.ejs
+++ b/v02/peNoChao/views/partials/head.ejs
@@ -16,3 +16,6 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.16.0/css/mdb.min.css" rel="stylesheet">
 
 <link rel="stylesheet" href="/stylesheets/style.css">
+
+<!-- Favicon -->
+<link rel="icon" href="/images/logo_200x200.png" sizes="16x16" type="image/png">
