--- a/v02/peNoChao/views/atletaResultados.ejs
+++ b/v02/peNoChao/views/atletaResultados.ejs
@@ -17,10 +17,10 @@
   <!-- Div fixa do time (capitão)-->
   
 
-  <% let mostra; jogadorLogado.times_id == null ? mostra="d-none" : mostra=""; let meuTime = times[jogadorLogado.times_id - 1] %>
+  <% let meuTime = { nome:""}; let escudoMeuTime; let mostra; if(jogadorLogado.times_id == null){ oculta="d-none" } else {  oculta=""; meuTime = times[jogadorLogado.times_id - 1]; escudoMeuTime = meuTime.MidiasTimes[0].path };  %>
   
-  <% escudoMeuTime = meuTime.MidiasTimes[0].path %>
-  <div class="container-fluid p-2 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao mb-3 pb-3 px-4 <%= mostra %>">
+
+  <div class="container-fluid p-2 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao mb-3 pb-3 px-4 <%= oculta %>">
     <div class="mt-2">
       <h5 class="text-center">Meu Time</h5>
 
