--- a/v02/peNoChao/views/cadastroTimes.ejs
+++ b/v02/peNoChao/views/cadastroTimes.ejs
@@ -26,7 +26,7 @@
               <h4 class="m-3">Informe os seguintes dados para montarmos o perfil do seu time:</h4>
 
               <div class="mt-3 mx-5 px-5 alinhamento">
-                <form action="/time/atualizar" method="POST" enctype="multipart/form-data">
+                <form action="/time/cadastro" method="POST" enctype="multipart/form-data">
 
                   <input type="text" id="idCapitao" name="idCapitao" value="<%= idCapitao %>" readonly class="d-none">
 
