BUG: Corrigido link do botão

--- a/v02/peNoChao/views/partials/headerLogada.ejs
+++ b/v02/peNoChao/views/partials/headerLogada.ejs
@@ -28,7 +28,7 @@
               </a>
             </div>
             <div class="col px-0 d-flex justify-content-center">
-              <a class="navbar-brand mx-0 py-0   " href="sair"  >
+              <a class="navbar-brand mx-0 py-0   " href="/sair"  >
                 <img src="/images/sair.png"  alt="SAIR" id="imgNotificacoes">
               </a>
             </div>
