Ajustando margem na coluna resultados

--- a/v02/peNoChao/views/atletaResultados.ejs
+++ b/v02/peNoChao/views/atletaResultados.ejs
@@ -39,7 +39,7 @@
   </div>
 
 <!--Div do grado dos jogadores destaque-->
-  <div class="container-fluid p-2 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao mt-3 mb-3 pb-3 px-4">
+  <div class="container-fluid p-2 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao mb-3 pb-3 px-4">
     <div class="mt-2">
       <h5 class="text-center">Jogadores</h5>
     </div>
