--- a/v02/peNoChao/views/atualizacaoCadastroTime.ejs
+++ b/v02/peNoChao/views/atualizacaoCadastroTime.ejs
@@ -22,8 +22,7 @@
           <div class="row d-flex justify-content-center">
             <div class="col-lg-9  p-0 mt-3 form-cadastro text-light text-center">
               <h1>OLÁ CAPITÃO!</h1>
-              <!-- <h4 class="p-0">Seja muito bem vindo ao PéNoChão, a rede social dos jogadores de várzea!</h4> -->
-              <h4 class="m-3">Informe os seguintes dados para montarmos o perfil do seu time:</h4>
+              <h4 class="m-3">Edite os dados do seu time:</h4>
 
               <div class="mt-3 mx-5 px-5 alinhamento">
                 <form action="/time/editar/<%= time.id %>" method="POST" enctype="multipart/form-data">
