--- a/v02/peNoChao/views/atletaResultados.ejs
+++ b/v02/peNoChao/views/atletaResultados.ejs
@@ -122,6 +122,35 @@
     </div>
   </div>
 
+<!--Div do grado dos jogadores destaque-->
+<div class="container-fluid p-2 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao mb-3 pb-3 px-4">
+  <div class="mt-2">
+    <h5 class="text-center">Times</h5>
+  </div>
+  <!--Divi das fotos dos jogadores-->
+  <div class="row mt-3">
+    <% console.log(times) %>
+    <% if(times != undefined) { for(let x of times) { let file = x.MidiasTimes[0].path; %>
+    <%# for(let x of jogadores) { %>
+    <%# if (x.id!=jogador.id){ %>
+    <div class="col-sm-4 justify-content-center mb-2">
+      <div class="row justify-content-center">
+        <img src="/images/midias/<%= file %>"  width="50vw" class="rounded-circle foto-perfil-jogadores">
+      </div>
+
+      <div class="row justify-content-center">
+        <a href="/time/exibir/<%=x.id%>">
+          <% nomeTime = x.nome.split(" ") %>
+          <%= nomeTime[0] %>
+        </a>
+      </div>
+    </div>
+    <%}%>
+  <% }%>
+  </div>
+</div>
+
+
   <!--Div dos times-->
   <div class="container-fluid p-2 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao ">
     <div class="mt-2">
