Criado funções :seguirJogadorPerfil, onde jogador pode seguir

--- a/v02/peNoChao/views/perfilJogadorPerfil.ejs
+++ b/v02/peNoChao/views/perfilJogadorPerfil.ejs
@@ -25,5 +25,13 @@
           <!-- <h5 class="text-center">Estatísticas</h5> -->
       </div>
     </div>
+    <form action="/perfilJogador/seguir" method="post">
+    <div class="row justify-content-center mb-3">
+      <input type="hidden" name="idPerfilJogador" id="" value="<%=jogador.id%>">
+      <button class="col-9 btn-form m-0 d-flex justify-content-center" >
+        <p class="text-center mt-2 mb-2" >Seguir</p>
+      </button>
+    </div>
+  </form>
     </div>
   </div>
