--- a/v02/peNoChao/views/partials/footer.ejs
+++ b/v02/peNoChao/views/partials/footer.ejs
@@ -113,6 +113,8 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="js/validadorCep.js"></script>
 
+<script src="js/post.js"></script>
+
 <script src="js/validadorCep.js"></script>
 <div id="fb-root"></div>
   <script>(function(d, s, id) {
