--- a/v02/peNoChao/views/atletaPerfil.ejs
+++ b/v02/peNoChao/views/atletaPerfil.ejs
@@ -31,13 +31,13 @@
 
               <hr>
 
-              <div class="row justify-content-center mb-3">
+              <div class="col d-flex justify-content-center mb-3">
                 <a class="col-9 btn-form m-0 d-flex justify-content-between" href="/time/<%= action %>">
                   <img src="/images/faixa.PNG" alt="Seja um Capitão" class="btn-icon mt-1 mb-1">
                   <p class="text-center mt-2 mb-2" ><%= frase %></p>
                 </a>
               </div>
-              <div class="row justify-content-center mb-3">
+              <div class="col d-flex justify-content-center mb-3">
                 <a class="col-9 btn-form m-0 d-flex justify-content-around" href="/atualizar">
                   <img src="/images/academia.png" alt="Atualizar Perfil" class="btn-icon2 mt-1 mb-1">
                   <p class="text-center mt-2 mb-2" >Editar Perfil</p>
