--- a/v02/peNoChao/views/cadastro.ejs
+++ b/v02/peNoChao/views/cadastro.ejs
@@ -52,15 +52,15 @@
               <label for="posicaoJogador"> Posição em Campo </label>
               <select name="posicaoJogador" required>
                 <option value="selecione" selected>Selecione</option>
-                <option value="goleiro">Goleiro</option>
-                <option value="zagueiro">Zagueiro</option>
-                <option value="lateral">Lateral</option>
-                <option value="volante">Volante</option>
-                <option value="meioCampo">Meio Campo</option>
-                <option value="meioAtacante">Meio Atacante</option>
-                <option value="ponta">Ponta</option>
-                <option value="segundoAtacante">Segundo Atacante</option>
-                <option value="centroavante">Centroavante</option>
+                <option value="Goleiro">Goleiro</option>
+                <option value="Zagueiro">Zagueiro</option>
+                <option value="Lateral">Lateral</option>
+                <option value="Volante">Volante</option>
+                <option value="Meio Campo">Meio Campo</option>
+                <option value="Meio Atacante">Meio Atacante</option>
+                <option value="Ponta">Ponta</option>
+                <option value="Segundo Atacante">Segundo Atacante</option>
+                <option value="Centroavante">Centroavante</option>
               </select>
               <label for="cep">CEP (Clique na lupa para buscar e confirmar o seu CEP)</label>
               <div class="d-flex justify-content-center">
