--- a/v02/peNoChao/views/partials/headerLogada.ejs
+++ b/v02/peNoChao/views/partials/headerLogada.ejs
@@ -13,7 +13,7 @@
           <form action="/pesquisa" method="GET" class="form-inline justify-content-center">
             <input class="form-control border-info rounded-pill col-sm-12" type="search" placeholder="Pesquisar"
               aria-label="Search" id="buscaHeader">
-            <button type="submit"><img src="/images/lupaPesquisa.png" alt="" width="10vw"></button>
+            <button type="submit" class="d-none" ><img src="/images/lupaPesquisa.png" alt="" width="10vw"></button>
           </form>
         </div> 
           <div class="col d-flex justify-content-center icon-penochao-mobile-fixed" >
